# plex_api_tester

./: notes.md  pyproject.toml
src/plex_api_tester/: __init__.py  config.py  main.py  plex_api_client.py  plex_api_data.py  plex_data.py  plex_python_api_data.py  test.py
src/plex_api_tester/plex/: __init__.py  api_client.py  authentication.py  config.py
tests/.plex_cred/: credentials.json
